alteração tamanho dos botões

--- a/athena/css/home.css
+++ b/athena/css/home.css
@@ -239,7 +239,7 @@ p {
 /*	background-image: url("../img/aires.png");
 	background-size: 25%; 
 	background-repeat: no-repeat;*/
-	margin, padding: 0%;
+	padding: 0%;
 	margin-bottom: -40%; 
 	padding-bottom: 0%; 
 	width: 100%;
