--- a/athena/css/home.css
+++ b/athena/css/home.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-#containerExterno {
-	background-color: 
-}
 
 #containerContent{
 	width: 80%;
@@ -105,6 +102,7 @@ img.recursosTamanho {
 	overflow-x: hidden;
 	overflow: -moz-scrollbars-none;
 	scrollbar-width: none;
+	align-items: center;
 }
 
 #randroidcontainer > * {
