Atulização dos apps até o 4 ano

--- a/athena/css/recurso.css
+++ b/athena/css/recurso.css
@@ -53,6 +53,11 @@ p.texto {
 	text-align: center;
 }
 
+.col-sm-4.alinhamentoImgBtn {
+    display: flex;
+    align-content: center;
+    align-items: center;
+}
 .posicionamentoMetadados {
 	text-align: left;
 }
